@@ -29,9 +29,9 @@
           <tr>
             <td>
               <table>
-                <tr exists="#[articleNumber-exists]">
-                  <td>![ARTICLE_NUMBER]</td>
-                  <td>#[articleNumber]</td>
+                <tr exists="#[articleNumber-EXISTS]">
+                  <td>![article_number]</td>
+                  <td>#[ARTICLENUMBER]</td>
                 </tr>
                 <tr exists="#[colorText-exists]">
                   <td>![ARTICLE_COLOUR]</td>
