@@ -1,5 +1,7 @@
 3.7.2 2020xxxx
+  BF: Template: Optimization of the statics for case insensitivity 
   CR: Maven: Update of dependencies
+  CR: Generator: Optimization of the code
 
 3.7.1.1 20200510
   BF: Service: Correction of deprecated code
